--- a/estruturas_de_repeticao/for/tabuada_com_for.html
+++ b/estruturas_de_repeticao/for/tabuada_com_for.html
@@ -25,18 +25,23 @@
 
     let num = parseInt(prompt(`Qual tabuada você quer ver? `));
 
-    for (let contador = 1; contador <= 10; contador++) {
+    /* for (let contador = 1; contador <= 10; contador++) {
 
         let tabuada = num * contador;
         exibeTexto(`${num} x ${contador} = ${tabuada}`);
     
-    }
-
-    /* while (contador <= 10) {
-
-        exibeTexto(`${num} x ${contador} = ${tabuada}`);
-        contador++
     } */
+
+    let contador = 1;
+    
+
+    while (contador <= 10) {
+
+        let tabuada = num * contador;
+        exibeTexto(`${num} x ${contador} = ${tabuada}`);
+        // console.log(`${num} x ${contador} = ${tabuada}`);
+        contador++;
+    }
 
     exibeTexto(`FIM`);
 
