explicaçao well booleanos

--- a/array/jogo_adivinha_array.html
+++ b/array/jogo_adivinha_array.html
@@ -52,7 +52,7 @@
             
             function verifica() {
 
-                let achou = false;
+                let achou = false; // só muda quando for verdadeiro; (break)
 
                 for(let position = 0; position < secrets.length; position++) {
 
